[package]
name = "hasura-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus_exporter = "0.8.5"
env_logger = "0.9.1"
log = "0.4.17"
reqwest = {  version = "0.11.12", features = ["blocking"] } 
tokio-postgres = "0.7.7"
tokio = { version = "1", features = ["full"] }